# percussion

./: README.md  pyproject.toml  requirements.txt
percussion/: all_cause_deaths.py  alldeaths.py  ancprev.py  hivprev.py
tests/: bwa-urban-anc.csv  deaths-data-synthetic.csv  deaths-projected.csv  ken-coast-anc.csv  mwi-hiv-prev-data.csv  mwi-hiv-prev-projected.csv  test_all_cause_deaths.py  test_alldeaths.py  test_ancprev.py  test_hivprev.py
